--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -51,6 +51,7 @@
         <item name="skin_checkoutLoginButtonColor">#836B11</item>
         <item name="skin_loginBrandIconDrawable">@drawable/expedia_login</item>
         <item name="skin_carsUncheckedToggleTextColor">@color/cars_unchecked_toggle_text_color</item>
+        <item name="skin_carsPinDrawable">@drawable/cars_pin</item>
 
     </style>
 
