--- a/project/src/travelocity/res/layout/fragment_phone_launch.xml
+++ b/project/src/travelocity/res/layout/fragment_phone_launch.xml
@@ -77,7 +77,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="bottom|center"
-            android:paddingBottom="50dp">
+            android:paddingBottom="30dp">
 
             <TextView
                 android:id="@+id/tvly_flights"
@@ -103,7 +103,7 @@
                 android:id="@+id/tvly_cars"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableTop="@drawable/lob_car"
+                android:drawableTop="@drawable/btn_tvly_car"
                 android:gravity="center"
                 android:paddingRight="20dp"
                 android:text="@string/nav_cars"
@@ -113,7 +113,7 @@
                 android:id="@+id/tvly_activities"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableTop="@drawable/ic_launch_activities"
+                android:drawableTop="@drawable/btn_tvly_lx"
                 android:gravity="center"
                 android:text="@string/nav_lx"
                 android:textSize="15dp" />
