--- a/project/src/travelocity/res/values/styles_lx.xml
+++ b/project/src/travelocity/res/values/styles_lx.xml
@@ -69,5 +69,6 @@
         <item name="skin_lxUncheckedToggleTextColor">@color/lx_unchecked_toggle_text_color_tvly</item>
         <item name="skin_lxTicketPlusButtonSelectorDrawable">@drawable/lx_ticket_plus_button_selector_tvly</item>
         <item name="skin_lxTicketMinusButtonSelectorDrawable">@drawable/lx_ticket_minus_button_selector_tvly</item>
+        <item name="skin_lxErrorDefaultDrawable">@drawable/error_default_tvly</item>
     </style>
 </resources>
