--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -52,6 +52,7 @@
         <item name="skin_loginBrandIconDrawable">@drawable/expedia_login</item>
         <item name="skin_carsUncheckedToggleTextColor">@color/cars_unchecked_toggle_text_color</item>
         <item name="skin_carsPinDrawable">@drawable/cars_pin</item>
+        <item name="skin_carsErrorDefaultDrawable">@drawable/error_default</item>
 
     </style>
 
