--- a/project/src/main/res/values/styles_lx.xml
+++ b/project/src/main/res/values/styles_lx.xml
@@ -68,6 +68,7 @@
         <item name="skin_lxUncheckedToggleTextColor">@color/lx_unchecked_toggle_text_color</item>
         <item name="skin_lxTicketPlusButtonSelectorDrawable">@drawable/lx_ticket_plus_button_selector</item>
         <item name="skin_lxTicketMinusButtonSelectorDrawable">@drawable/lx_ticket_minus_button_selector</item>
+        <item name="skin_lxErrorDefaultDrawable">@drawable/error_default</item>
 
     </style>
 
