--- a/project/src/travelocity/res/values/styles_cars.xml
+++ b/project/src/travelocity/res/values/styles_cars.xml
@@ -32,6 +32,7 @@
         <item name="skin_loginBrandIconDrawable">@drawable/tvly_login</item>
         <item name="skin_carsUncheckedToggleTextColor">@color/cars_unchecked_toggle_text_color_tvly</item>
         <item name="skin_carsPinDrawable">@drawable/cars_pin_tvly</item>
+        <item name="skin_carsErrorDefaultDrawable">@drawable/error_default_tvly</item>
 
         <item name="skin_loginBookNowButtonDrawable">@drawable/btn_signin_travelocity</item>
         <item name="skin_phoneCheckoutLoginLogoDrawable">@drawable/tvly</item>
