s/4739 Material hotel details
- Add hotel detail presenter
- Create api offers call and parse hotel details

--- a/project/src/main/res/layout/activity_hotel.xml
+++ b/project/src/main/res/layout/activity_hotel.xml
@@ -18,4 +18,11 @@
         android:background="#EAEAEA"
         android:visibility="gone"/>
 
+    <com.expedia.bookings.presenter.hotel.HotelDetailPresenter
+        android:id="@+id/widget_hotel_detail"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#EAEAEA"
+        android:visibility="gone"/>
+
 </com.expedia.bookings.presenter.hotel.HotelPresenter>
