--- a/project/src/main/res/values-v21/styles_lx.xml
+++ b/project/src/main/res/values-v21/styles_lx.xml
@@ -4,7 +4,7 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="V2.Theme.LX" parent="AppTheme.BaseLX" />
+    <style name="V2.Theme.LX" parent="LXTheme.Base.Whitelabel" />
 
     <style name="LXButton" parent="android:Widget.Material.Button">
         <item name="android:textColor">@android:color/white</item>
