--- a/project/src/main/res/menu/menu_filter_item.xml
+++ b/project/src/main/res/menu/menu_filter_item.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/menu_search"
-        android:icon="@drawable/ic_menu_search_mtrl_alpha"
-        android:title="@string/search"
-        app:showAsAction="always" />
+        android:id="@+id/menu_filter"
+        android:icon="@drawable/sort"
+        android:title="@string/filter"
+        app:showAsAction="always|withText" />
 
 </menu>
