--- a/project/src/main/res/values/styles.xml
+++ b/project/src/main/res/values/styles.xml
@@ -1103,4 +1103,17 @@
         <item name="android:textStyle">normal</item>
         <item name="android:textSize">15sp</item>
     </style>
+
+    <!-- New hotel material design -->
+    <style name="Widget.SlidingRadioGroup.HotelFilterControls" parent="Widget">
+        <item name="android:gravity">center</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="dividerWidth">1dp</item>
+        <item name="selectedDividerColor">#ff596a80</item>
+        <item name="selectedDrawable">@color/hotels_primary_color</item>
+        <item name="sluggishness">150</item>
+        <item name="unselectedDividerColor">#40999999</item>
+        <item name="unselectedDrawable">@color/itin_white_text</item>
+    </style>
+
 </resources>
