add accountlib to hotels/flights/cars/lx

--- a/project/src/main/res/layout/account_v2_button.xml
+++ b/project/src/main/res/layout/account_v2_button.xml
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.widget.AccountButton xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingTop="@dimen/account_button_margin_top" >
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:id="@+id/error_container"
-        style="@style/BookingSection"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_error_box"
         android:gravity="center"
-        android:visibility="gone" >
+        android:visibility="gone">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -32,12 +27,11 @@
 
     <LinearLayout
         android:id="@+id/account_loading_container"
-        style="@style/BookingSection"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:visibility="gone" >
+        android:visibility="gone">
 
         <ProgressBar
             android:id="@+id/loading_progress_bar"
@@ -67,20 +61,23 @@
     <LinearLayout
         android:id="@+id/account_login_container"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/account_button_height"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:paddingTop="@dimen/account_button_padding"
-        android:paddingBottom="@dimen/account_button_padding"
-        android:visibility="gone" >
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/login_text_view"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/account_button_padding"
-            android:drawablePadding="@dimen/card_icon_padding"
-            android:gravity="center_vertical"
-            android:textSize="@dimen/login_button_text_size"
+            android:drawablePadding="16dp"
+            android:gravity="center|left"
+            android:textSize="18sp"
+            android:padding="16dp"
+            android:textColor="@color/cars_actionbar_text_color"
+            android:drawableLeft="@drawable/expedia"
             app:textStyle="@integer/login_button_text_style" />
 
         <com.expedia.bookings.widget.TextView
@@ -99,55 +96,64 @@
 
     <LinearLayout
         android:id="@+id/account_logout_container"
-        style="@style/BookingSection"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:gravity="center_vertical"
-        android:paddingTop="@dimen/account_button_padding"
-        android:paddingBottom="@dimen/account_button_padding"
-        android:visibility="gone" >
+        android:visibility="gone">
 
         <ImageView
             android:id="@+id/card_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/account_button_padding"
-            android:paddingLeft="@dimen/login_button_icon_padding_left"
-            android:paddingRight="@dimen/login_button_icon_padding_right"
-            android:src="?attr/skin_phoneCheckoutLoginLogoDrawable" />
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="16dp"
+            android:src="@drawable/expedia"
+            android:scaleType="center"/>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            style="@style/HorizontalOnTablet" >
+            android:layout_gravity="center_vertical"
+            android:orientation="vertical"
+            android:paddingLeft="15dp">
 
-            <com.expedia.bookings.widget.TextView
+        <com.expedia.bookings.widget.TextView
                 android:id="@+id/account_top_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/LoginButtonTopTextStyle" />
+                android:gravity="center|left"
+                android:singleLine="true"
+                android:textSize="16sp"
+                android:textColor="@color/cars_actionbar_text_color"
+                app:textStyle="medium"/>
 
-            <TextView
+            <com.expedia.bookings.widget.TextView
                 android:id="@+id/account_bottom_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                style="@style/LoginButtonBottomTextStyle" />
+                android:gravity="center|left"
+                android:singleLine="true"
+                android:textSize="13sp"/>
         </LinearLayout>
 
         <ImageView
             android:id="@+id/account_logout_logout_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_log_out"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/widget_close"
+            android:scaleType="center"
             android:background="?android:attr/selectableItemBackground"
-            style="@style/LoginButtonLogoutImageStyle" />
+            android:layout_marginLeft="8dp" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/account_rewards_container"
         android:layout_width="match_parent"
+        android:layout_gravity="bottom"
         android:layout_height="wrap_content"
         android:minHeight="@dimen/account_rewards_container_height_for_empty_message"
         android:visibility="gone">
@@ -155,10 +161,9 @@
         <TextView
             android:id="@+id/account_rewards_textview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="@dimen/account_rewards_container_height"
+            android:layout_height="@dimen/account_rewards_container_height"
             android:gravity="center"
-            android:textSize="@dimen/account_button_points_text_size"/>
+            android:textSize="@dimen/account_button_points_text_size" />
     </LinearLayout>
 
-</com.expedia.bookings.widget.AccountButton>
+</merge>
