Dynamic feedback of filters for LX. https://eiwork.mingle.thoughtworks.com/projects/india_mobile_team/cards/3367. - Refactor dynamic feedback widget from cars. - Refactor filter button with count widget.

--- a/project/src/main/res/layout/car_results_presenter.xml
+++ b/project/src/main/res/layout/car_results_presenter.xml
@@ -82,7 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
                 <com.expedia.bookings.widget.TextView
                     android:id="@+id/toolbar_detail_text"
@@ -101,60 +101,13 @@
 
     </android.support.v7.widget.Toolbar>
 
-    <LinearLayout
+    <com.expedia.bookings.widget.FilterButtonWithCountWidget
         android:id="@+id/sort_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="58dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:orientation="vertical"
-        android:visibility="gone">
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="8dp"
-            android:layout_alignParentTop="true"
-            android:background="@drawable/drop_shadow" />
-
-        <LinearLayout
-            android:id="@+id/sort_filter_button"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/sort_filter_selector"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/filter_number_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="?attr/skin_carsFilterNumberBgDrawable"
-                android:paddingBottom="1dp"
-                android:paddingLeft="5.5dp"
-                android:paddingRight="5.5dp"
-                android:textColor="#ffffff"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                app:textStyle="medium" />
-
-            <ImageView
-                android:id="@+id/filter_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:src="@drawable/sort" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:text="@string/filter"
-                android:textAllCaps="false"
-                android:textColor="@color/text_black"
-                android:textSize="16sp"
-                app:textStyle="medium" />
-        </LinearLayout>
-
-    </LinearLayout>
+        android:visibility="gone" />
 
     <com.expedia.bookings.widget.CarFilterWidget
         android:id="@+id/filter"
