--- a/project/src/main/res/layout/lx_result_presenter.xml
+++ b/project/src/main/res/layout/lx_result_presenter.xml
@@ -19,44 +19,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <LinearLayout
+        <com.expedia.bookings.widget.FilterButtonWithCountWidget
             android:id="@+id/sort_filter_button_container"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/lx_sort_filter_container_height"
-            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:visibility="gone" >
+            android:orientation="vertical"
+            android:visibility="gone" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="8dp"
-                android:layout_alignParentTop="true"
-                android:background="@drawable/drop_shadow" />
-
-            <LinearLayout
-                android:id="@+id/sort_filter_button"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/lx_sort_filter_button_height"
-                android:background="@drawable/sort_filter_selector"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/sort" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:text="@string/lx_sort_filter"
-                    android:textAllCaps="false"
-                    android:textColor="@color/lx_sort_filter_text_color"
-                    android:textSize="16sp"
-                    app:textStyle="medium" />
-            </LinearLayout>
-        </LinearLayout>
     </com.expedia.bookings.widget.LXSearchResultsWidget>
 
     <View
