--- a/project/src/main/res/layout/widget_car_filter.xml
+++ b/project/src/main/res/layout/widget_car_filter.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -201,54 +202,15 @@
             </LinearLayout>
         </com.expedia.bookings.widget.ScrollView>
 
-        <android.support.v7.widget.CardView
+        <com.expedia.bookings.widget.DynamicFeedbackWidget
             android:id="@+id/dynamic_feedback_container"
             android:layout_width="match_parent"
             android:layout_height="36dp"
-            android:layout_gravity="bottom"
-            android:layout_margin="16dp"
-            android:background="#ffffff"
-            android:clickable="true"
             app:cardCornerRadius="18dp"
-            app:cardPreventCornerOverlap="false" >
+            android:layout_margin="16dp"
+            android:clickable="true"
+            app:cardPreventCornerOverlap="false"
+            android:layout_gravity="bottom" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal" >
-
-                <com.expedia.bookings.widget.TextView
-                    android:id="@+id/dynamic_feedback_counter"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|left"
-                    android:paddingLeft="20dp"
-                    android:textColor="#939393"
-                    android:textSize="13sp"
-                    app:textStyle="medium" />
-
-                <View
-                    android:layout_width="1px"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="6dp"
-                    android:layout_marginTop="6dp"
-                    android:background="#979797" />
-
-                <com.expedia.bookings.widget.TextView
-                    android:id="@+id/dynamic_feedback_clear_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:background="?attr/selectableItemBackground"
-                    android:gravity="center"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
-                    android:textColor="?attr/skin_carsPrimaryColor"
-                    android:textSize="13sp"
-                    android:text="@string/clear_filters"
-                    app:textStyle="normal" />
-
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
     </FrameLayout>
 </merge>
