--- a/project/src/main/res/layout/widget_lx_sort_filter.xml
+++ b/project/src/main/res/layout/widget_lx_sort_filter.xml
@@ -1,117 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.widget.LXSortFilterWidget
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.expedia.bookings.widget.LXSortFilterWidget xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/sort_filter_widget"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EFEFEF"
-    android:clickable="true"
-    android:orientation="vertical">
+    android:clickable="true">
 
     <LinearLayout
-        android:id="@+id/sort_filter_top_layout"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:orientation="horizontal">
-
-        <com.expedia.bookings.widget.TextView
-            style="@style/LXFilterTitleTextAppearance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left|center"
-            android:layout_weight="1"
-            android:gravity="left"
-            android:padding="@dimen/lx_sort_filter_padding"
-            android:text="@string/lx_filter" />
-
-        <Button
-            android:id="@+id/sort_filter_done_button"
-            style="@style/LXRobotoFont"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:background="?android:attr/selectableItemBackground"
-            android:drawableLeft="@drawable/ic_check_white_24dp"
-            android:padding="@dimen/lx_sort_filter_padding"
-            android:text="@string/lx_apply_sort_filter"
-            android:textAllCaps="false"
-            android:textColor="@color/lx_sort_filter_top_bar_text_color"
-            android:textSize="16sp" />
-    </LinearLayout>
-
-    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="none">
+        android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/sort_filter_top_layout"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:orientation="horizontal">
+
+            <com.expedia.bookings.widget.TextView
+                style="@style/LXFilterTitleTextAppearance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:padding="@dimen/lx_sort_filter_padding"
+                android:text="@string/lx_filter" />
+
+            <Button
+                android:id="@+id/sort_filter_done_button"
+                style="@style/LXRobotoFont"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:background="?android:attr/selectableItemBackground"
+                android:drawableLeft="@drawable/ic_check_white_24dp"
+                android:padding="@dimen/lx_sort_filter_padding"
+                android:text="@string/done"
+                android:textAllCaps="false"
+                android:textColor="@color/lx_sort_filter_top_bar_text_color"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingBottom="@dimen/lx_sort_filter_padding"
-            android:paddingTop="@dimen/lx_sort_filter_padding" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/lx_sort_filter_padding"
-                android:paddingRight="@dimen/lx_sort_filter_padding"
-                android:includeFontPadding="false"
-                android:text="@string/lx_sort_by"
-                android:textColor="?attr/skin_lxPrimaryColor" />
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/lx_sort_filter_margin"
-                android:layout_marginRight="@dimen/lx_sort_filter_margin"
-                android:layout_marginTop="10dp"
-                app:cardCornerRadius="3dp"
-                app:cardElevation="1dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <Button
-                        android:id="@+id/price_sort_button"
-                        android:layout_width="0dp"
-                        android:layout_height="40dp"
-                        android:layout_weight="1"
-                        android:background="?attr/skin_lxSortButtonSelectorDrawable"
-                        android:text="@string/lx_price_sort_button"
-                        android:textAllCaps="false"
-                        android:textColor="?attr/skin_lxSortButtonTextSelectorDrawable" />
-
-                    <Button
-                        android:id="@+id/popularity_sort_button"
-                        android:layout_width="0dp"
-                        android:layout_height="40dp"
-                        android:layout_weight="1"
-                        android:background="?attr/skin_lxSortButtonSelectorDrawable"
-                        android:text="@string/lx_popularity_sort_button"
-                        android:textAllCaps="false"
-                        android:textColor="?attr/skin_lxSortButtonTextSelectorDrawable" />
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:paddingLeft="@dimen/lx_sort_filter_padding"
-                android:paddingRight="@dimen/lx_sort_filter_padding"
-                android:text="@string/lx_categories"
-                android:textColor="?attr/skin_lxPrimaryColor" />
+            android:scrollbars="none">
 
             <LinearLayout
-                android:id="@+id/filter_categories"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical" />
+                android:orientation="vertical"
+                android:paddingBottom="@dimen/lx_sort_filter_padding"
+                android:paddingTop="@dimen/lx_sort_filter_padding">
 
-        </LinearLayout>
-    </ScrollView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:includeFontPadding="false"
+                    android:paddingLeft="@dimen/lx_sort_filter_padding"
+                    android:paddingRight="@dimen/lx_sort_filter_padding"
+                    android:text="@string/lx_sort_by"
+                    android:textColor="?attr/skin_lxPrimaryColor" />
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/lx_sort_filter_margin"
+                    android:layout_marginRight="@dimen/lx_sort_filter_margin"
+                    android:layout_marginTop="10dp"
+                    app:cardCornerRadius="3dp"
+                    app:cardElevation="1dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <Button
+                            android:id="@+id/price_sort_button"
+                            android:layout_width="0dp"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:background="?attr/skin_lxSortButtonSelectorDrawable"
+                            android:text="@string/lx_price_sort_button"
+                            android:textAllCaps="false"
+                            android:textColor="?attr/skin_lxSortButtonTextSelectorDrawable" />
+
+                        <Button
+                            android:id="@+id/popularity_sort_button"
+                            android:layout_width="0dp"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:background="?attr/skin_lxSortButtonSelectorDrawable"
+                            android:text="@string/lx_popularity_sort_button"
+                            android:textAllCaps="false"
+                            android:textColor="?attr/skin_lxSortButtonTextSelectorDrawable" />
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:paddingLeft="@dimen/lx_sort_filter_padding"
+                    android:paddingRight="@dimen/lx_sort_filter_padding"
+                    android:text="@string/lx_categories"
+                    android:textColor="?attr/skin_lxPrimaryColor" />
+
+                <LinearLayout
+                    android:id="@+id/filter_categories"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical" />
+
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
+
+    <com.expedia.bookings.widget.DynamicFeedbackWidget
+        android:id="@+id/dynamic_feedback_container"
+        android:layout_width="match_parent"
+        android:layout_height="36dp"
+        app:cardCornerRadius="18dp"
+        android:layout_margin="16dp"
+        android:clickable="true"
+        app:cardPreventCornerOverlap="false"
+        android:visibility="gone"
+        android:layout_gravity="bottom" />
 
 </com.expedia.bookings.widget.LXSortFilterWidget>
