--- a/project/src/travelocity/res/values/styles_lx.xml
+++ b/project/src/travelocity/res/values/styles_lx.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="LXTheme.Base.Whitelabel" parent="AppTheme.BaseLX">
+    <style name="Whitelabel.LXTheme.Base" parent="AppTheme.Base.LX">
         <!-- Required white label attr for login widget -->
         <item name="skin_loginBookNowButtonDrawable">@drawable/btn_signin_travelocity</item>
         <item name="skin_phoneCheckoutLoginLogoDrawable">@drawable/tvly</item>
