--- a/project/src/main/res/values-v21/styles_cars.xml
+++ b/project/src/main/res/values-v21/styles_cars.xml
@@ -4,7 +4,7 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="V2.Theme.Cars" parent="CarsTheme.Base">
+    <style name="V2.Theme.Cars" parent="Whitelabel.CarsTheme.Base">
         <item name="android:alertDialogTheme">@style/Theme.AlertDialog</item>
     </style>
 
