4761. AB Test: Collapse Amenities, Policies, and fees on Infosite
Design wants us to make HotelTextSections expandable with varying bullet points shown.
Adding new view called HotelSectionExpandableText to incorporate design needs.

--- a/project/src/main/res/xml/preferences_dev.xml
+++ b/project/src/main/res/xml/preferences_dev.xml
@@ -247,6 +247,14 @@
             android:summary="Select a test group"
             android:title="Hotel 3x points messaging" />
 
+        <ListPreference
+            android:entries="@array/abacus_default_choices"
+            android:entryValues="@array/abacus_default_choice_values"
+            android:defaultValue="-1"
+            android:key="8126"
+            android:summary="Select a test group"
+            android:title="Hotel collapse amenities, policies, fees" />
+
     </PreferenceCategory>
 
     <PreferenceCategory android:title="Push" >
