--- a/project/src/main/res/layout/account_lib_activity.xml
+++ b/project/src/main/res/layout/account_lib_activity.xml
@@ -44,4 +44,56 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/facebook_button_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <com.expedia.bookings.widget.TextView
+            android:id="@+id/login_status_textview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:bufferType="spannable"
+            android:textColor="#f3f3f3"
+            android:textSize="18sp" />
+
+        <View
+            android:id="@+id/login_status_divider"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/login_divider_height"
+            android:background="#5CFFFFFF" />
+
+        <EditText
+            android:id="@+id/link_password_edit_text"
+            style="@style/LoginFormEditText"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:imeOptions="actionDone"
+            android:inputType="textPassword" />
+
+        <Button
+            android:id="@+id/link_accounts_button"
+            style="@style/LoginFormButton"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/btn_link"
+            android:gravity="center"
+            android:text="@string/link_accounts" />
+
+        <Button
+            android:id="@+id/cancel_link_accounts_button"
+            style="@style/LoginFormButton"
+            android:layout_marginTop="0dp"
+            android:background="@drawable/btn_cancel"
+            android:gravity="center"
+            android:text="@string/cancel" />
+    </LinearLayout>
+
 </FrameLayout>
