--- a/project/src/main/res/values/donottranslate.xml
+++ b/project/src/main/res/values/donottranslate.xml
@@ -30,6 +30,10 @@
     <string name="lean_plum_sdk_prod_appid">xKlVSadJbLLqOI2ox80QLZQ5IBec4VRggWTjdpuQQAk</string>
     <string name="lean_plum_sdk_prod_key">tCIe8ebANwhOqDWxLtscOmvONeW7OGR4f91hm8rT1cg</string>
 
+    <!-- Tune SDK Key -->
+    <string name="tune_sdk_app_advertiser_id">159126</string>
+    <string name="tune_sdk_app_conversion_key">3670b78dab0046d263b4fb15329d5129</string>
+
     <!-- MapsV2 -->
     <!-- Maps v2 key configured to work with many application package names -->
     <string name="mapsv2_key">AIzaSyCcUFcOBytf5_4zQCVisZeZ1Vw1PHuVI24</string>
