--- a/project/src/main/res/layout/widget_hotel_receipt.xml
+++ b/project/src/main/res/layout/widget_hotel_receipt.xml
@@ -33,19 +33,74 @@
             android:layout_height="wrap_content"
             android:textColor="@color/hotel_receipt_text"
             android:textSize="14sp"
+            android:layout_marginBottom="8dp"
             app:textStyle="light" />
+
+        <RelativeLayout
+            android:id="@+id/room_address_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone">
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="@dimen/one_px_hdpi_two_px_xhdpi"
+                android:layout_alignParentTop="true"
+                android:background="@color/overview_receipt_divider" />
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/room_address_label"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_marginTop="8dp"
+                android:ellipsize="end"
+                android:text="@string/hotel_receipt_address"
+                android:textColor="@color/hotel_receipt_header_text"
+                android:textSize="12sp"
+                app:textStyle="medium" />
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/room_address_text_view"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/room_address_label"
+                android:layout_marginBottom="8dp"
+                android:ellipsize="end"
+                android:maxLines="5"
+                android:textColor="@color/hotel_receipt_text"
+                android:textSize="12sp"
+                app:textStyle="normal" />
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/hotel_receipt_view_map_textbutton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:background="?android:attr/selectableItemBackground"
+                android:drawableLeft="@drawable/ic_hotel_receipt_map_action"
+                android:drawablePadding="5dp"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="@string/hotel_receipt_view_map"
+                android:textColor="@color/hotel_receipt_text"
+                android:textSize="12sp"
+                app:textStyle="normal" />
+        </RelativeLayout>
 
         <View
             android:id="@+id/room_long_description_divider"
             android:layout_width="fill_parent"
             android:layout_height="@dimen/one_px_hdpi_two_px_xhdpi"
-            android:layout_marginTop="8dp"
             android:background="@color/overview_receipt_divider" />
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/room_long_description_text_view"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             android:ellipsize="end"
             android:maxLines="5"
@@ -60,7 +115,6 @@
             android:layout_width="fill_parent"
             android:layout_height="@dimen/one_px_hdpi_two_px_xhdpi"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
             android:background="@color/overview_receipt_divider"
             android:visibility="gone" />
 
