--- a/project/src/main/res/xml/preferences_dev.xml
+++ b/project/src/main/res/xml/preferences_dev.xml
@@ -255,6 +255,14 @@
             android:summary="Select a test group"
             android:title="Hotel collapse amenities, policies, fees" />
 
+        <ListPreference
+            android:entries="@array/abacus_default_choices"
+            android:entryValues="@array/abacus_default_choice_values"
+            android:defaultValue="-1"
+            android:key="8129"
+            android:summary="Select a test group"
+            android:title="Show hotel address and map in receipt" />
+
     </PreferenceCategory>
 
     <PreferenceCategory android:title="Push" >
