--- a/project/src/main/res/values/styles_lx.xml
+++ b/project/src/main/res/values/styles_lx.xml
@@ -43,6 +43,7 @@
         <item name="skin_lxTicketPlusButtonSelectorDrawable">@drawable/lx_ticket_plus_button_selector</item>
         <item name="skin_lxTicketMinusButtonSelectorDrawable">@drawable/lx_ticket_minus_button_selector</item>
         <item name="skin_lxErrorDefaultDrawable">@drawable/error_default</item>
+        <item name="skin_filterNumberBgDrawable">@drawable/filter_number_bg_lx</item>
 
     </style>
 
