--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -41,6 +41,7 @@
         <item name="skin_carsUncheckedToggleTextColor">@color/cars_unchecked_toggle_text_color</item>
         <item name="skin_carsPinDrawable">@drawable/cars_pin</item>
         <item name="skin_carsErrorDefaultDrawable">@drawable/error_default</item>
+        <item name="skin_filterNumberBgDrawable">@drawable/filter_number_bg_cars</item>
 
         <item name="skin_loginBookNowButtonDrawable">@drawable/btn_signin</item>
         <item name="skin_phoneCheckoutLoginLogoDrawable">@drawable/expedia</item>
