--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -328,5 +328,6 @@
     <attr name="skin_lxTicketPlusButtonSelectorDrawable" format="reference" />
     <attr name="skin_lxTicketMinusButtonSelectorDrawable" format="reference" />
     <attr name="skin_lxErrorDefaultDrawable" format="reference" />
+    <attr name="skin_filterNumberBgDrawable" format="reference" />
 
 </resources>
