--- a/project/src/main/res/values/arrays.xml
+++ b/project/src/main/res/values/arrays.xml
@@ -845,4 +845,18 @@
         <item>2</item>
     </string-array>
 
+    <string-array name="abacus_flight_missing_callout_choices">
+        <item>@string/preference_abacus_setting_server</item>
+        <item>@string/preference_abacus_setting_controlgroup</item>
+        <item>Single line "Enter" addition</item>
+        <item>Second line callout</item>
+    </string-array>
+
+    <string-array name="abacus_flight_missing_callout_values">
+        <item>-1</item>
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
 </resources>
